--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Odin Recipes</h1>
+    <ul>
+      <li><a href="recipes/gnocchi-with-peas-pesto-and-spinach.html">Gnocchi with peas, pesto and spinach</a></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </body>
 </html>
