Add second recipe

--- a/recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html
+++ b/recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gnocchi with peas, pesto and spinach</title>
+  <title>Tagliatelle with peas and summer green pesto</title>
 </head>
 <body>
-  <h1>Gnocchi with peas, pesto and spinach</h1>
+  <h1>Tagliatelle with peas and summer green pesto</h1>
   <figure>
     <img src="https://images.immediate.co.uk/production/volatile/sites/2/2018/08/OLI-0818-Everyday-PeaShootGnocchi_27263-27313f6.jpg?webp=true&quality=90&resize=940%2C399" alt=" ">
   </figure>
