Add third recipe

--- a/recipes/gnocchi-with-peas-pesto-and-spinach.html
+++ b/recipes/gnocchi-with-peas-pesto-and-spinach.html
@@ -19,7 +19,7 @@
     <li>fresh pesto 4 tbsp </li>
     <li>crème fraîche 3 tbsp</li>
     <li>gnocchi 300g pack </li>
-    <li>pea shoots to serve (optional</li>
+    <li>pea shoots to serve (optional)</li>
   </ul>
   <h2>Steps</h2>
   <ol>
