--- a/recipes/vegetarian-summer-carbonara.html
+++ b/recipes/vegetarian-summer-carbonara.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tagliatelle with peas and summer green pesto</title>
+  <title>Vegetarian carbonara</title>
 </head>
 <body>
-  <h1>Tagliatelle with peas and summer green pesto</h1>
+  <h1>Vegetarian carbonara</h1>
   <figure>
     <img src="https://images.immediate.co.uk/production/volatile/sites/2/2014/12/2664.jpg?webp=true&quality=90&crop=2px%2C338px%2C596px%2C253px&resize=596%2C253" alt=" ">
   </figure>
