--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/gnocchi-with-peas-pesto-and-spinach.html">Gnocchi with peas, pesto and spinach</a></li>
-      <li></li>
+      <li><a href="recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html">Tagliatelle with peas and summer green pesto</a></li>
       <li></li>
     </ul>
   </body>
