Add third recipe

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="recipes/gnocchi-with-peas-pesto-and-spinach.html">Gnocchi with peas, pesto and spinach</a></li>
       <li><a href="recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html">Tagliatelle with peas and summer green pesto</a></li>
-      <li></li>
+      <li><a href="recipes/vegetarian-summer-carbonara.html">Vegetarian carbonara</a></li>
     </ul>
   </body>
 </html>
