--- a/recipes/vegetarian-summer-carbonara.html
+++ b/recipes/vegetarian-summer-carbonara.html
@@ -8,24 +8,28 @@
 <body>
   <h1>Vegetarian carbonara</h1>
   <figure>
-    <img src="https://images.immediate.co.uk/production/volatile/sites/2/2014/12/2664.jpg?webp=true&quality=90&crop=2px%2C338px%2C596px%2C253px&resize=596%2C253" alt=" ">
+    <img src="https://images.immediate.co.uk/production/volatile/sites/2/2015/05/8721.jpg?webp=true&quality=90&resize=600%2C255" alt=" ">
   </figure>
   <h2>Description</h2>
-  <p>Give pesto pasta a twist with this quick and easy recipe for two. A simple homemade pesto with rocket and parmesan is the perfect sauce for tagliatelle </h2>
+  <p>Everyone loves carbonara, so we've updated this Italian classic with asparagus and peas for summer. Our summer carbonara is vegetarian, ready in just 20 minutes and makes the most of seasonal veg, what could be better?</h2>
   <ul>
-    <li>rocket 75g, washed</li>
-    <li>garlic 1 clove</li>
-    <li>pine nuts 25g</li>
+    <li>asparagus tips 100g</li>
+    <li>peas 100g</li>
+    <li>garlic 1 clove, crushed</li>
     <li>olive oil</li>
-    <li>parmesan (or vegetarian alternative) 25g, grated</li>
-    <li>tagliatelle 150g</li>
-    <li>peas 150g </li>
+    <li>linguine 150g</li>
+    <li>egg yolk 1</li>
+    <li>double cream 100ml</li>
+    <li>parmesan (or vegetarian alternative) 25g, finely grated </li>
   </ul>
   <h2>Steps</h2>
   <ol>
-    <li>Put the rocket, garlic and pine nuts in a small food processor and whizz, adding 4 tbsp olive oil as you go (add extra if you prefer a thinner texture). Stir in the parmesan and season.</li>
-    <li>Cook the tagliatelle adding the peas for the last minute of cooking time.</li>
-    <li>Drain, keeping 1 tbsp of the cooking water. Toss the pesto, pasta, peas and water together and serve with extra cheese if you like.</li>
+    <li>Cook the asparagus until just tender, adding the peas for the last 2 minutes of cooking. Scoop out. Cook the linguine (you can use the same water).</li>
+    <li>Cook the garlic in a splash of olive oil for 2 minutes, then add the asparagus and peas and cook for a minute.</li>
+    <li>Whisk the egg yolk, cream and parmesan and season well.</li>
+    <li>Lift the cooked linguine out of the water with tongs and add to the asparagus pan.</li>
+    <li>Toss a couple of times then add the egg mix off the heat and keep tossing until everything is emulsified (add a couple of tbsp of pasta water to the pan if you need to).</li>
+    <li>Serve with extra parmesan, if you like.</li>
   </ol>
 </body>
 </html>
