--- a/recipes/gnocchi-with-peas-pesto-and-spinach.html
+++ b/recipes/gnocchi-with-peas-pesto-and-spinach.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gnocchi with peas, pesto and spinach</title>
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
   <h1>Gnocchi with peas, pesto and spinach</h1>
@@ -28,5 +29,6 @@
     <li>Cook the gnocchi in a pan of boiling water following pack instructions then scoop out with a slotted spoon into the spinach pan.</li>
     <li>Toss everything together, then serve in warmed bowls topped with a few pea shoots, if using.</li>
   </ol>
+  <a href="../index.html">Home</a>
 </body>
 </html>
