--- a/recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html
+++ b/recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tagliatelle with peas and summer green pesto</title>
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
   <h1>Tagliatelle with peas and summer green pesto</h1>
@@ -27,5 +28,6 @@
     <li>Cook the tagliatelle adding the peas for the last minute of cooking time.</li>
     <li>Drain, keeping 1 tbsp of the cooking water. Toss the pesto, pasta, peas and water together and serve with extra cheese if you like.</li>
   </ol>
+  <a href="../index.html">Home</a>
 </body>
 </html>
