--- a/recipes/vegetarian-summer-carbonara.html
+++ b/recipes/vegetarian-summer-carbonara.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vegetarian carbonara</title>
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
   <h1>Vegetarian carbonara</h1>
@@ -31,5 +32,6 @@
     <li>Toss a couple of times then add the egg mix off the heat and keep tossing until everything is emulsified (add a couple of tbsp of pasta water to the pan if you need to).</li>
     <li>Serve with extra parmesan, if you like.</li>
   </ol>
+  <a href="../index.html">Home</a>
 </body>
 </html>
