--- a/recipes/gnocchi-with-peas-pesto-and-spinach.html
+++ b/recipes/gnocchi-with-peas-pesto-and-spinach.html
@@ -7,12 +7,16 @@
   <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
+  <div ="recipe-main-grid">
   <h1>Gnocchi with peas, pesto and spinach</h1>
   <figure>
     <img src="https://images.immediate.co.uk/production/volatile/sites/2/2018/08/OLI-0818-Everyday-PeaShootGnocchi_27263-27313f6.jpg?webp=true&quality=90&resize=940%2C399" alt=" ">
   </figure>
+  <section class="recipe-description">
   <h2>Description</h2>
   <p>Check out this quick, creamy gnocchi recipe with fresh pesto, bright peas and baby spinach – ready in just 10 minutes </p>
+  </section>
+  <section class="recipe-ingredients">
   <h2>Ingredients</h2>
   <ul>
     <li>baby spinach 50g, chopped </li>
@@ -22,6 +26,8 @@
     <li>gnocchi 300g pack </li>
     <li>pea shoots to serve (optional)</li>
   </ul>
+  </section>
+  <section class="recipe-steps">
   <h2>Steps</h2>
   <ol>
     <li>Put the spinach and peas in a non-stick pan with some seasoning and a splash of water, and heat, stirring, until the spinach has wilted.</li>
@@ -29,6 +35,8 @@
     <li>Cook the gnocchi in a pan of boiling water following pack instructions then scoop out with a slotted spoon into the spinach pan.</li>
     <li>Toss everything together, then serve in warmed bowls topped with a few pea shoots, if using.</li>
   </ol>
+  </section>
   <a href="../index.html">Home</a>
+  </div>
 </body>
 </html>
