--- a/recipes/vegetarian-summer-carbonara.html
+++ b/recipes/vegetarian-summer-carbonara.html
@@ -7,12 +7,17 @@
   <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
+  <div class="recipe-main-grid">
   <h1>Vegetarian carbonara</h1>
   <figure>
     <img src="https://images.immediate.co.uk/production/volatile/sites/2/2015/05/8721.jpg?webp=true&quality=90&resize=600%2C255" alt=" ">
   </figure>
+  <section class="recipe-description">
   <h2>Description</h2>
-  <p>Everyone loves carbonara, so we've updated this Italian classic with asparagus and peas for summer. Our summer carbonara is vegetarian, ready in just 20 minutes and makes the most of seasonal veg, what could be better?</h2>
+  <p>Everyone loves carbonara, so we've updated this Italian classic with asparagus and peas for summer. Our summer carbonara is vegetarian, ready in just 20 minutes and makes the most of seasonal veg, what could be better?</p>
+  </section>
+  <section class="recipe-ingredients">
+  <h2>Ingredients</h2>
   <ul>
     <li>asparagus tips 100g</li>
     <li>peas 100g</li>
@@ -23,6 +28,8 @@
     <li>double cream 100ml</li>
     <li>parmesan (or vegetarian alternative) 25g, finely grated </li>
   </ul>
+  </section>
+  <section class="recipe-steps">
   <h2>Steps</h2>
   <ol>
     <li>Cook the asparagus until just tender, adding the peas for the last 2 minutes of cooking. Scoop out. Cook the linguine (you can use the same water).</li>
@@ -32,6 +39,8 @@
     <li>Toss a couple of times then add the egg mix off the heat and keep tossing until everything is emulsified (add a couple of tbsp of pasta water to the pan if you need to).</li>
     <li>Serve with extra parmesan, if you like.</li>
   </ol>
+  </section>
   <a href="../index.html">Home</a>
+  </div>
 </body>
 </html>
