Add Grid layout to recipe pages

--- a/recipes/gnocchi-with-peas-pesto-and-spinach.html
+++ b/recipes/gnocchi-with-peas-pesto-and-spinach.html
@@ -1,42 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gnocchi with peas, pesto and spinach</title>
-  <link rel="stylesheet" href="../styles/style.css">
-</head>
-<body>
-  <div ="recipe-main-grid">
-  <h1>Gnocchi with peas, pesto and spinach</h1>
-  <figure>
-    <img src="https://images.immediate.co.uk/production/volatile/sites/2/2018/08/OLI-0818-Everyday-PeaShootGnocchi_27263-27313f6.jpg?webp=true&quality=90&resize=940%2C399" alt=" ">
-  </figure>
-  <section class="recipe-description">
-  <h2>Description</h2>
-  <p>Check out this quick, creamy gnocchi recipe with fresh pesto, bright peas and baby spinach – ready in just 10 minutes </p>
-  </section>
-  <section class="recipe-ingredients">
-  <h2>Ingredients</h2>
-  <ul>
-    <li>baby spinach 50g, chopped </li>
-    <li>frozen peas 100g, defrosted</li>
-    <li>fresh pesto 4 tbsp </li>
-    <li>crème fraîche 3 tbsp</li>
-    <li>gnocchi 300g pack </li>
-    <li>pea shoots to serve (optional)</li>
-  </ul>
-  </section>
-  <section class="recipe-steps">
-  <h2>Steps</h2>
-  <ol>
-    <li>Put the spinach and peas in a non-stick pan with some seasoning and a splash of water, and heat, stirring, until the spinach has wilted.</li>
-    <li>Add the pesto and crème fraîche, and gently heat through.</li>
-    <li>Cook the gnocchi in a pan of boiling water following pack instructions then scoop out with a slotted spoon into the spinach pan.</li>
-    <li>Toss everything together, then serve in warmed bowls topped with a few pea shoots, if using.</li>
-  </ol>
-  </section>
-  <a href="../index.html">Home</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gnocchi with peas, pesto and spinach</title>
+    <link rel="stylesheet" href="../styles/style.css" />
+  </head>
+  <body>
+    <div class="recipe-main-grid">
+      <header class="recipe-header">
+        <h1>Gnocchi with peas, pesto and spinach</h1>
+        <figure>
+          <img
+            src="https://images.immediate.co.uk/production/volatile/sites/2/2018/08/OLI-0818-Everyday-PeaShootGnocchi_27263-27313f6.jpg?webp=true&quality=90&resize=940%2C399"
+            alt=" "
+          />
+        </figure>
+      </header>
+      <section class="recipe-description">
+        <h2>Description</h2>
+        <p>
+          Check out this quick, creamy gnocchi recipe with fresh pesto, bright
+          peas and baby spinach – ready in just 10 minutes
+        </p>
+      </section>
+      <section class="recipe-ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>baby spinach 50g, chopped</li>
+          <li>frozen peas 100g, defrosted</li>
+          <li>fresh pesto 4 tbsp</li>
+          <li>crème fraîche 3 tbsp</li>
+          <li>gnocchi 300g pack</li>
+          <li>pea shoots to serve (optional)</li>
+        </ul>
+      </section>
+      <section class="recipe-steps">
+        <h2>Steps</h2>
+        <ol>
+          <li>
+            Put the spinach and peas in a non-stick pan with some seasoning and
+            a splash of water, and heat, stirring, until the spinach has wilted.
+          </li>
+          <li>Add the pesto and crème fraîche, and gently heat through.</li>
+          <li>
+            Cook the gnocchi in a pan of boiling water following pack
+            instructions then scoop out with a slotted spoon into the spinach
+            pan.
+          </li>
+          <li>
+            Toss everything together, then serve in warmed bowls topped with a
+            few pea shoots, if using.
+          </li>
+        </ol>
+      </section>
+      <footer class="recipe-footer">
+        <h3><a href="../index.html">Home</a></h3>
+        <p>Other recipes:</p>
+        <ul>
+          <li>
+            <a href="tagliatelle-with-peas-and-summer-green-pesto.html.html"
+              >Tagliatelle with peas and summer green pesto</a
+            >
+          </li>
+          <li>
+            <a href="vegetarian-summer-carbonara.html">Vegetarian carbonara</a>
+          </li>
+        </ul>
+      </footer>
+    </div>
+  </body>
 </html>
