--- a/recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html
+++ b/recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html
@@ -1,42 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tagliatelle with peas and summer green pesto</title>
-  <link rel="stylesheet" href="../styles/style.css">
-</head>
-<body>
-  <div class="recipe-main-grid">
-  <h1>Tagliatelle with peas and summer green pesto</h1>
-  <figure>
-    <img src="https://images.immediate.co.uk/production/volatile/sites/2/2014/12/2664.jpg?webp=true&quality=90&crop=2px%2C338px%2C596px%2C253px&resize=596%2C253" alt=" ">
-  </figure>
-  <section class="recipe-description">
-  <h2>Description</h2>
-  <p>Give pesto pasta a twist with this quick and easy recipe for two. A simple homemade pesto with rocket and parmesan is the perfect sauce for tagliatelle</p> 
-  </section>
-  <section class="recipe-ingredients">
-  <h2>Ingredients</h2>
-  <ul>
-    <li>rocket 75g, washed</li>
-    <li>garlic 1 clove</li>
-    <li>pine nuts 25g</li>
-    <li>olive oil</li>
-    <li>parmesan (or vegetarian alternative) 25g, grated</li>
-    <li>tagliatelle 150g</li>
-    <li>peas 150g </li>
-  </ul>
-  </section>
-  <section class="recipe-steps">
-  <h2>Steps</h2>
-  <ol>
-    <li>Put the rocket, garlic and pine nuts in a small food processor and whizz, adding 4 tbsp olive oil as you go (add extra if you prefer a thinner texture). Stir in the parmesan and season.</li>
-    <li>Cook the tagliatelle adding the peas for the last minute of cooking time.</li>
-    <li>Drain, keeping 1 tbsp of the cooking water. Toss the pesto, pasta, peas and water together and serve with extra cheese if you like.</li>
-  </ol>
-  </section>
-  <a href="../index.html">Home</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tagliatelle with peas and summer green pesto</title>
+    <link rel="stylesheet" href="../styles/style.css" />
+  </head>
+  <body>
+    <div class="recipe-main-grid">
+      <header class="recipe-header">
+        <h1>Tagliatelle with peas and summer green pesto</h1>
+        <figure>
+          <img
+            src="https://images.immediate.co.uk/production/volatile/sites/2/2014/12/2664.jpg?webp=true&quality=90&crop=2px%2C338px%2C596px%2C253px&resize=596%2C253"
+            alt=" "
+          />
+        </figure>
+      </header>
+      <section class="recipe-description">
+        <h2>Description</h2>
+        <p>
+          Give pesto pasta a twist with this quick and easy recipe for two. A
+          simple homemade pesto with rocket and parmesan is the perfect sauce
+          for tagliatelle
+        </p>
+      </section>
+      <section class="recipe-ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>rocket 75g, washed</li>
+          <li>garlic 1 clove</li>
+          <li>pine nuts 25g</li>
+          <li>olive oil</li>
+          <li>parmesan (or vegetarian alternative) 25g, grated</li>
+          <li>tagliatelle 150g</li>
+          <li>peas 150g</li>
+        </ul>
+      </section>
+      <section class="recipe-steps">
+        <h2>Steps</h2>
+        <ol>
+          <li>
+            Put the rocket, garlic and pine nuts in a small food processor and
+            whizz, adding 4 tbsp olive oil as you go (add extra if you prefer a
+            thinner texture). Stir in the parmesan and season.
+          </li>
+          <li>
+            Cook the tagliatelle adding the peas for the last minute of cooking
+            time.
+          </li>
+          <li>
+            Drain, keeping 1 tbsp of the cooking water. Toss the pesto, pasta,
+            peas and water together and serve with extra cheese if you like.
+          </li>
+        </ol>
+      </section>
+      <footer class="recipe-footer">
+        <h3><a href="../index.html">Home</a></h3>
+        <p>Other recipes:</p>
+        <ul>
+          <li>
+            <a href="gnocchi-with-peas-pesto-and-spinach.html"
+              >Gnocchi with peas, pesto and spinach</a
+            >
+          </li>
+          <li>
+            <a href="vegetarian-summer-carbonara.html">Vegetarian carbonara</a>
+          </li>
+        </ul>
+      </footer>
+    </div>
+  </body>
 </html>
