--- a/recipes/vegetarian-summer-carbonara.html
+++ b/recipes/vegetarian-summer-carbonara.html
@@ -1,46 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vegetarian carbonara</title>
-  <link rel="stylesheet" href="../styles/style.css">
-</head>
-<body>
-  <div class="recipe-main-grid">
-  <h1>Vegetarian carbonara</h1>
-  <figure>
-    <img src="https://images.immediate.co.uk/production/volatile/sites/2/2015/05/8721.jpg?webp=true&quality=90&resize=600%2C255" alt=" ">
-  </figure>
-  <section class="recipe-description">
-  <h2>Description</h2>
-  <p>Everyone loves carbonara, so we've updated this Italian classic with asparagus and peas for summer. Our summer carbonara is vegetarian, ready in just 20 minutes and makes the most of seasonal veg, what could be better?</p>
-  </section>
-  <section class="recipe-ingredients">
-  <h2>Ingredients</h2>
-  <ul>
-    <li>asparagus tips 100g</li>
-    <li>peas 100g</li>
-    <li>garlic 1 clove, crushed</li>
-    <li>olive oil</li>
-    <li>linguine 150g</li>
-    <li>egg yolk 1</li>
-    <li>double cream 100ml</li>
-    <li>parmesan (or vegetarian alternative) 25g, finely grated </li>
-  </ul>
-  </section>
-  <section class="recipe-steps">
-  <h2>Steps</h2>
-  <ol>
-    <li>Cook the asparagus until just tender, adding the peas for the last 2 minutes of cooking. Scoop out. Cook the linguine (you can use the same water).</li>
-    <li>Cook the garlic in a splash of olive oil for 2 minutes, then add the asparagus and peas and cook for a minute.</li>
-    <li>Whisk the egg yolk, cream and parmesan and season well.</li>
-    <li>Lift the cooked linguine out of the water with tongs and add to the asparagus pan.</li>
-    <li>Toss a couple of times then add the egg mix off the heat and keep tossing until everything is emulsified (add a couple of tbsp of pasta water to the pan if you need to).</li>
-    <li>Serve with extra parmesan, if you like.</li>
-  </ol>
-  </section>
-  <a href="../index.html">Home</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vegetarian carbonara</title>
+    <link rel="stylesheet" href="../styles/style.css" />
+  </head>
+  <body>
+    <div class="recipe-main-grid">
+      <header class="recipe-header">
+        <h1>Vegetarian carbonara</h1>
+        <figure>
+          <img
+            src="https://images.immediate.co.uk/production/volatile/sites/2/2015/05/8721.jpg?webp=true&quality=90&resize=600%2C255"
+            alt=" "
+          />
+        </figure>
+      </header>
+      <section class="recipe-description">
+        <h2>Description</h2>
+        <p>
+          Everyone loves carbonara, so we've updated this Italian classic with
+          asparagus and peas for summer. Our summer carbonara is vegetarian,
+          ready in just 20 minutes and makes the most of seasonal veg, what
+          could be better?
+        </p>
+      </section>
+      <section class="recipe-ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>asparagus tips 100g</li>
+          <li>peas 100g</li>
+          <li>garlic 1 clove, crushed</li>
+          <li>olive oil</li>
+          <li>linguine 150g</li>
+          <li>egg yolk 1</li>
+          <li>double cream 100ml</li>
+          <li>parmesan (or vegetarian alternative) 25g, finely grated</li>
+        </ul>
+      </section>
+      <section class="recipe-steps">
+        <h2>Steps</h2>
+        <ol>
+          <li>
+            Cook the asparagus until just tender, adding the peas for the last 2
+            minutes of cooking. Scoop out. Cook the linguine (you can use the
+            same water).
+          </li>
+          <li>
+            Cook the garlic in a splash of olive oil for 2 minutes, then add the
+            asparagus and peas and cook for a minute.
+          </li>
+          <li>Whisk the egg yolk, cream and parmesan and season well.</li>
+          <li>
+            Lift the cooked linguine out of the water with tongs and add to the
+            asparagus pan.
+          </li>
+          <li>
+            Toss a couple of times then add the egg mix off the heat and keep
+            tossing until everything is emulsified (add a couple of tbsp of
+            pasta water to the pan if you need to).
+          </li>
+          <li>Serve with extra parmesan, if you like.</li>
+        </ol>
+      </section>
+      <footer class="recipe-footer">
+        <h3><a href="../index.html">Home</a></h3>
+        <p>Other recipes:</p>
+        <ul>
+          <li>
+            <a href="gnocchi-with-peas-pesto-and-spinach.html"
+              >Gnocchi with peas, pesto and spinach</a
+            >
+          </li>
+          <li>
+            <a href="tagliatelle-with-peas-and-summer-green-pesto.html.html"
+              >Tagliatelle with peas and summer green pesto</a
+            >
+          </li>
+        </ul>
+      </footer>
+    </div>
+  </body>
 </html>
