--- a/index.html
+++ b/index.html
@@ -5,16 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <div class="index-main-grid">
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="recipes/gnocchi-with-peas-pesto-and-spinach.html">Gnocchi with peas, pesto and spinach</a></li>
-      <li><a href="recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html">Tagliatelle with peas and summer green pesto</a></li>
-      <li><a href="recipes/vegetarian-summer-carbonara.html">Vegetarian carbonara</a></li>
-    </ul>
+      <h1>Odin Recipes</h1>
+      <ul>
+        <li>
+          <a href="recipes/gnocchi-with-peas-pesto-and-spinach.html"
+            >Gnocchi with peas, pesto and spinach</a
+          >
+        </li>
+        <li>
+          <a
+            href="recipes/tagliatelle-with-peas-and-summer-green-pesto.html.html"
+            >Tagliatelle with peas and summer green pesto</a
+          >
+        </li>
+        <li>
+          <a href="recipes/vegetarian-summer-carbonara.html"
+            >Vegetarian carbonara</a
+          >
+        </li>
+      </ul>
     </div>
   </body>
 </html>
