--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=KoHo:wght@300;400;700&family=Nunito:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Bootstrap Stylesheet -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,11 +22,26 @@
       crossorigin="anonymous"
     />
 
+    <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
+
   <body>
-    <div class="index-main-grid">
-      <h1>Odin Recipes</h1>
+    <section id="title">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-lg-7 title-heading-container align-self-center">
+            <h1 class="title-header">Odin Recipes</h1>
+          </div>
+
+          <div class="col-lg-5">
+            <img class="title-image" src="/images/title-image.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="recipe-links">
       <ul>
         <li>
           <a href="recipes/gnocchi-with-peas-pesto-and-spinach.html"
@@ -35,7 +60,7 @@
           >
         </li>
       </ul>
-    </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
